[BE] 1차 스프린트 리팩토링을 dev 브랜치에 반영한다. (#176)
* refactor: 서비스, 컨트롤러 클래스 삭제

* feat: 체크리스트 방 정보 작성 API 구현

* feat: 체크리스트 질문 조회 API 구현

* feat: 작성한 체크리스트 조회 API 구현

* feat: 카테고리 조회 API 구현

* refactor: 사용자 체크리스트 리스트 조회 API 수정 반영

* feat: 카테고리 우선순위 저장 API 구현

* refactor: 방 비교 결과 API 수정 반영

* refactor: request, response dto 패키지 분리

* refactor: DTO request/response package 분리

* fix: 머지 후 실패하는 코드 수정

* fix: 머지 실패 시 오류 해결

---------

Co-authored-by: shin-jisong <86762272+shin-jisong@users.noreply.github.com>
Co-authored-by: tkdgur0906 <tkdgur0906@naver.com>
Co-authored-by: tsulocalize <tsulocalize@gmail.com>